# ConsumerLib

./: main.py  pyproject.toml
src/: consumer.py
